# ScallopShell

./: .gitignore  BUGS.md  CLA.md  CMakeCache.txt  CMakeLists.txt  FUTUREFEATURES.md  Makefile  README.md  ScallopShell  ScallopSymbols.txt  a.out  benign_malware.c  build.sh  cmake_install.cmake  god_rev_script  info.txt  pppp  prog_asm.s  ptrace_ASM_dump.cpp  scallop  scary  sus.as  sus.s
config/: libraryconfig.txt
decompiler/: CMakeLists.txt  README.md  build.sh
decompiler/include/: csv.hpp  filter.hpp  main.hpp
decompiler/include/decompilerAPI/: decompilerAPI.hpp  ghidra.hpp  switcher.hpp
decompiler/src/: csv.cpp  elf.cpp  file_info.cpp  filter.cpp  main.cpp  memory.cpp
decompiler/src/decompilerAPI/: decompilerAPI.cpp  ghidra.cpp  switcher.cpp
ev/: eventhandler.hpp
include/: appstate.hpp  asm_dump.hpp  cligui.hpp  core.hpp  cpupicker.hpp  datastructs.hpp  debug.hpp  disasmdisplay.hpp  emulatorAPI.hpp  gui.hpp  guihelpers.hpp  iodisplay.hpp  jump.hpp  loop.hpp  main.hpp  memorydisplay.hpp  notes.hpp  registerdisplay.hpp  search.hpp  socket.hpp  watch.hpp
qemu-plugins/: CMakeLists.txt  Makefile  build.sh  context.txt  control.c  gate.c  logging.c  memregs.c  patch_gate.cpp  plugin.c
qemu-plugins/include/: breakpoint.hpp  debug.hpp  disasm.hpp  gate.hpp  main.hpp  memorydump.hpp  regdump.hpp  scallop.h  setmem.hpp  setreg.hpp  socket.hpp  symbols.hpp
qemu-plugins/src/: breakpoint.cpp  debug.cpp  disasm.cpp  gate.cpp  main.cpp  memorydump.cpp  regdump.cpp  setmem.cpp  setreg.cpp  socket.cpp  symbols.cpp
src/: benign_malware.c  cli.cpp  cligui.cpp  cpupicker.cpp  debug.cpp  disasmdisplay.cpp  emulatorAPI.cpp  guihelpers.cpp  iodisplay.cpp  main.cpp  memorydisplay.cpp  notes.cpp  ptrace_ASM_dump.cpp  registerdisplay.cpp  socket.cpp  test.cpp
src/emulatorAPI/: cli.cpp  controlflow.cpp  decomp.cpp  disasm.cpp  emulation.cpp  memory.cpp  register.cpp
src/libsrc/: asm_dump.cpp  core.cpp  gui.cpp  jump.cpp  loop.cpp  search.cpp  watch.cpp
testbinaries/: scary
